# Nereus_Code

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.txt  LICENSE_THIRD_PARTY.txt  README.md
Sources/: main.cpp
resources/shaders/: ocean.tesc  ocean.tese  ocean_fresnel.frag  ocean_phong.frag  ocean_phong.vert  ocean_refl.frag  ocean_refr.frag  ocean_wavesim.vert  screen_quad.frag  screen_quad.vert  seabed.frag  seabed.vert  skybox.frag  skybox.vert  test.frag  test.tesc  test.tese  test.vert
src/: main.cpp
src/graphics/: buffers.cpp  buffers.h  camera.cpp  camera.h  meshes.cpp  meshes.h  renderers.cpp  renderers.h  shaders.cpp  shaders.h  textures.cpp  textures.h  window.cpp  window.h
src/graphics/core/: buffers.cpp  window.cpp  window.h  window_manager.cpp  window_manager.h
src/graphics/meshes/: meshes.cpp  meshes.h  ocean_mesh.cpp  ocean_mesh.h  test_mesh.cpp  test_mesh.h
src/graphics/renderers/: renderers.cpp  renderers.h
src/main/: app_context.cpp  app_context.h  constants.h  main.cpp  nereus.cpp  nereus.h  window_manager.cpp
src/ui/: ui.cpp  ui.h
src/utils/: image_io.cpp  image_io.h
